// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobDetails /> should render properly 1`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #808080;
}

.emotion-4:hover {
  background-color: #b3b3b3;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-6 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-7 {
  color: #b3b3b3;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
  <h3
    className="emotion-0"
  >
    Job: 
    image_similarity.json
  </h3>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Toggle Dropdown Menu"
          className="emotion-4"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          Modify Job
          <svg
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        ID
        :
      </div>
      <div
        className="emotion-7"
      >
        82d5308b-67c2-1433-8fef-0a580a000956
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Status
        :
      </div>
      <div
        className="emotion-7"
      >
        InProgress
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Priority
        :
      </div>
      <div
        className="emotion-7"
      >
        100
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        # Assets
        :
      </div>
      <div
        className="emotion-7"
      >
        4
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Progress
        :
      </div>
      <div
        className="emotion-7"
      >
        <div
          aria-label="Progress Bar"
          className="emotion-20"
          onKeyPress={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="emotion-21"
          >
            <div
              className="emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<JobDetails /> should render properly 2`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #808080;
}

.emotion-4:hover {
  background-color: #b3b3b3;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-6 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-7 {
  color: #b3b3b3;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
  <h3
    className="emotion-0"
  >
    Job: 
    image_similarity.json
  </h3>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Toggle Dropdown Menu"
          className="emotion-4"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          Modify Job
          <svg
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        ID
        :
      </div>
      <div
        className="emotion-7"
      >
        82d5308b-67c2-1433-8fef-0a580a000956
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Status
        :
      </div>
      <div
        className="emotion-7"
      >
        InProgress
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Priority
        :
      </div>
      <div
        className="emotion-7"
      >
        100
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        # Assets
        :
      </div>
      <div
        className="emotion-7"
      >
        4
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Progress
        :
      </div>
      <div
        className="emotion-7"
      >
        <div
          aria-label="Progress Bar"
          className="emotion-20"
          onKeyPress={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="emotion-21"
          >
            <div
              className="emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<JobDetails /> should render properly with an action confirmation 1`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-6 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-7 {
  color: #b3b3b3;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 3 0 auto;
  -ms-flex: 3 0 auto;
  flex: 3 0 auto;
  background-color: #009f22;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div>
  <h3
    className="emotion-0"
  >
    Job: 
    image_similarity.json
  </h3>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#0074f5"
        data-file-name="information.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Retry All Failures
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        ID
        :
      </div>
      <div
        className="emotion-7"
      >
        82d5308b-67c2-1433-8fef-0a580a000956
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Status
        :
      </div>
      <div
        className="emotion-7"
      >
        Success
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Priority
        :
      </div>
      <div
        className="emotion-7"
      >
        100
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        # Assets
        :
      </div>
      <div
        className="emotion-7"
      >
        4
      </div>
    </div>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-6"
      >
        Progress
        :
      </div>
      <div
        className="emotion-7"
      >
        <div
          aria-label="Progress Bar"
          className="emotion-20"
          onKeyPress={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="emotion-21"
          >
            <div
              className="emotion-22"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
